--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,16 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-Django = "^3.2.5"
-psycopg2-binary = "^2.9.1"
+Django = "^4.0.1"
+djangorestframework = "^3.15.0"
+psycopg2 = "^2.9.9"
+gunicorn = "^21.2.0"
+pytest = "8.1.1"
+pytest-django = "^4.8.0"
+django-debug-toolbar = "^4.3.0"
+flake8 = "^3.9.2"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
-flake8 = "^3.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
