--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pytest = "8.1.1"
 pytest-django = "^4.8.0"
 django-debug-toolbar = "^4.3.0"
 flake8 = "^3.9.2"
+invoke = "^2.2.0"
+black = "^24.3.0"
 
 [tool.poetry.dev-dependencies]
 
