--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.8.1"
 Django = "^4.0.1"
 djangorestframework = "^3.15.0"
 psycopg2 = "^2.9.9"
@@ -13,9 +13,10 @@ gunicorn = "^21.2.0"
 pytest = "8.1.1"
 pytest-django = "^4.8.0"
 django-debug-toolbar = "^4.3.0"
-flake8 = "^3.9.2"
 invoke = "^2.2.0"
 black = "^24.3.0"
+flake8 = "6.1.0"
+pyproject-flake8 = "^6.1.0"
 
 [tool.poetry.dev-dependencies]
 
@@ -27,23 +28,8 @@ build-backend = "poetry.core.masonry.api"
 line-length = 120
 target-version = ['py38']
 include = '\.pyi?$'
-exclude = '''
-/(
-    \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.nox
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-)/
-'''
+exclude = ['\.eggs', '\.git', '\.hg', '\.mypy_cache', '\.nox', '\.tox', '\.venv', '_build', 'buck-out', 'build','dist']
 
-[flake8]
+[tool.flake8]
 max-line-length = 120
-extend-ignore = E203, W503
-exclude = .git,__pycache__,.venv
+extend-ignore = ["E203"]
