--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ flake8 = "6.1.0"
 pyproject-flake8 = "^6.1.0"
 
 [tool.poetry.dev-dependencies]
+pylint = "^3.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
