--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8.1"
+python = "^3.10"
 Django = "^4.0.1"
 djangorestframework = "^3.15.0"
 psycopg2 = "^2.9.9"
@@ -17,6 +17,7 @@ invoke = "^2.2.0"
 black = "^24.3.0"
 flake8 = "6.1.0"
 pyproject-flake8 = "^6.1.0"
+pre-commit = "^3.6.2"
 
 [tool.poetry.dev-dependencies]
 pylint = "^3.1.0"
@@ -29,7 +30,7 @@ build-backend = "poetry.core.masonry.api"
 line-length = 120
 target-version = ['py38']
 include = '\.pyi?$'
-exclude = ['\.eggs', '\.git', '\.hg', '\.mypy_cache', '\.nox', '\.tox', '\.venv', '_build', 'buck-out', 'build','dist']
+exclude = '\.eggs, \.git, \.hg, \.mypy_cache, \.nox, \.tox, \.venv, _build, buck-out, build, dist'
 
 [tool.flake8]
 max-line-length = 120
