--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ black = "^24.3.0"
 flake8 = "6.1.0"
 pyproject-flake8 = "^6.1.0"
 pre-commit = "^3.6.2"
+djangorestframework-simplejwt = "^5.3.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "^3.1.0"
